add scenary spot
